using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ConstLyb  {


    #region 动画参数


    public const string Animator_Speed = "Speed";
    public const string Animator_AttackMode = "AttackMode";
    public const string Animator_OpenFire = "OpenFire";






    #endregion











}
